[package]
name = "trabalho"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num-bigint = { version = "0.4.0", features = ["rand"] }
num-traits = "0.2.14"
num-integer = "0.1.44"

[dev-dependencies]
criterion = "0.3.5"
cargo-criterion = "1.1.0"

[[bench]]
name = "benchmark"
harness = false
